--- a/plugin/controller/dialog/reset.ui
+++ b/plugin/controller/dialog/reset.ui
@@ -38,6 +38,9 @@
      <property name="checkable">
       <bool>true</bool>
      </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="sampleInfo">
